--- a/assets/css/menu-management.css
+++ b/assets/css/menu-management.css
@@ -341,6 +341,13 @@
   font-weight: 600;
   color: #4b2e2e;
   margin-top: 8px;
+  position: relative;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;    
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
 }
 
 .menu-price {
