--- a/assets/css/admin_home.css
+++ b/assets/css/admin_home.css
@@ -146,8 +146,10 @@ body {
 }
 
 .visit-btn:hover {
-    background: var(--btn-hover1);
-    color: white;
+
+    background: var(--card-bg-color);
+    border-color: var(--primary-color);
+    color: var(--text-color-dark);
     transform: translateY(-2px);
     box-shadow: 0 4px 15px rgba(46, 26, 0, 0.3);
 }
@@ -159,8 +161,9 @@ body {
 }
 
 .logout-btn:hover {
-    background: var(--btn-hover2);
-    color: white;
+    background: var(--card-bg-color);
+    border-color: var(--primary-color);
+    color: var(--text-color-dark);
     transform: translateY(-2px);
     box-shadow: 0 4px 15px rgba(51, 51, 51, 0.3);
 }
