--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,7 +124,7 @@ footer .fab:not(.fa-tiktok):hover {
 /* Button Styles */
 .btn-fill {
     background-color: var(--primary-color);
-    color: var(--text-color-dark);
+    color: var(--text-color-light);
     border: none;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
