--- a/assets/css/coffee.css
+++ b/assets/css/coffee.css
@@ -579,3 +579,17 @@ body.modal-open {
   backdrop-filter: blur(5px);
   background-color: rgba(0, 0, 0, 0.6);
 }
+
+
+@media (max-width: 991px) and (orientation: portrait) {
+  .menu-item {
+    height: auto !important;
+    min-height: 280px;
+  }
+
+  .menu-item button {
+    margin-top: auto !important;
+    position: relative;
+    bottom: 0;
+  }
+}
