fix search button

--- a/assets/css/menu-management.css
+++ b/assets/css/menu-management.css
@@ -649,3 +649,9 @@ input:checked+.toggle-slider:before {
 .toast .btn-close {
   filter: invert(1) sepia(1) saturate(5) hue-rotate(200deg);
 }
+
+@media (max-width: 768px) {
+  .search-btn span {
+    display: none !important;
+  }
+}
