UPDATE | inventory decimals, payment logos, navbar alignment, gcash reference detection

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -157,3 +157,26 @@
      filter: blur(3px);
      pointer-events: none;
  }
+
+ .navbar-custom .container-fluid {
+    position: relative;
+    justify-content: center;
+}
+
+.navbar-brand {
+    position: absolute;
+    left: 1rem;
+}
+
+.d-none.d-lg-flex {
+    position: absolute;
+    right: 1rem;
+}
+
+.navbar-collapse {
+    position: static;
+}
+
+.navbar-nav {
+    margin: 0;
+}
