Modified: Orders.php, Cart.php and Css, Order-Confirmation Modal and stock modal

--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -406,6 +406,10 @@
     display: block;
 }
 
+.radio-option input[type="radio"]:checked ~ label .gcash-details {
+        color: white !important;
+    }
+
 /* Form Controls */
 .gcash-field {
     margin-top: 12px;
